--- a/code.ipynb
+++ b/code.ipynb
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
      "output_type": "stream",
      "text": [
       "XGBoost Results:\n",
-      "RMSE: 4.36\n",
+      "RMSE: 4.30\n",
       "R²: 0.93\n"
      ]
     }
@@ -621,9 +621,9 @@
     "\n",
     "# XGBoost model\n",
     "xgb_model = xgb.XGBRegressor(\n",
-    "    n_estimators=200,\n",
-    "    max_depth=5,\n",
-    "    learning_rate=0.1,\n",
+    "    n_estimators=300,\n",
+    "    max_depth=3,\n",
+    "    learning_rate=0.2,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=0.8,\n",
     "    random_state=42\n",
@@ -916,6 +916,44 @@
     "print(\"\\nLightGBM Results:\")\n",
     "print(f\"RMSE: {np.sqrt(mean_squared_error(y_test, lgb_pred)):.2f}\")\n",
     "print(f\"R²: {r2_score(y_test, lgb_pred):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best XGBoost Parameters: {'learning_rate': 0.2, 'max_depth': 3, 'n_estimators': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define parameter grid\n",
+    "param_grid = {\n",
+    "    'max_depth': [3, 5, 7],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'n_estimators': [100, 200, 300]\n",
+    "}\n",
+    "\n",
+    "# Grid search\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=xgb.XGBRegressor(random_state=42),\n",
+    "    param_grid=param_grid,\n",
+    "    cv=5,\n",
+    "    scoring='neg_mean_squared_error'\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Best parameters\n",
+    "print(\"Best XGBoost Parameters:\", grid_search.best_params_)\n",
+    "best_xgb = grid_search.best_estimator_"
    ]
   }
  ],
