optuna tuning added

--- a/code.ipynb
+++ b/code.ipynb
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,53 @@
       "[I 2025-04-01 00:25:58,678] Trial 13 finished with value: -46.450422758005146 and parameters: {'n_estimators': 142, 'max_depth': 22, 'min_samples_split': 5, 'max_features': 0.13075363983526722, 'bootstrap': False}. Best is trial 7 with value: -25.653192240335187.\n",
       "[I 2025-04-01 00:26:00,218] Trial 14 finished with value: -28.28503490217604 and parameters: {'n_estimators': 139, 'max_depth': 16, 'min_samples_split': 4, 'max_features': 0.8673318662826832, 'bootstrap': False}. Best is trial 7 with value: -25.653192240335187.\n",
       "[I 2025-04-01 00:26:01,515] Trial 15 finished with value: -26.233042099655165 and parameters: {'n_estimators': 143, 'max_depth': 24, 'min_samples_split': 6, 'max_features': 0.6662053294429051, 'bootstrap': False}. Best is trial 7 with value: -25.653192240335187.\n",
-      "[I 2025-04-01 00:26:03,793] Trial 16 finished with value: -25.112375822092392 and parameters: {'n_estimators': 300, 'max_depth': 15, 'min_samples_split': 4, 'max_features': 0.41784897588239067, 'bootstrap': False}. Best is trial 16 with value: -25.112375822092392.\n"
+      "[I 2025-04-01 00:26:03,793] Trial 16 finished with value: -25.112375822092392 and parameters: {'n_estimators': 300, 'max_depth': 15, 'min_samples_split': 4, 'max_features': 0.41784897588239067, 'bootstrap': False}. Best is trial 16 with value: -25.112375822092392.\n",
+      "[I 2025-04-01 00:26:06,557] Trial 17 finished with value: -24.87185738752868 and parameters: {'n_estimators': 300, 'max_depth': 15, 'min_samples_split': 3, 'max_features': 0.5539167270643186, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:09,029] Trial 18 finished with value: -26.81649338045532 and parameters: {'n_estimators': 300, 'max_depth': 15, 'min_samples_split': 3, 'max_features': 0.5711833153761686, 'bootstrap': True}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:11,270] Trial 19 finished with value: -25.078703283770437 and parameters: {'n_estimators': 298, 'max_depth': 16, 'min_samples_split': 4, 'max_features': 0.4735304635044475, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:14,105] Trial 20 finished with value: -25.01527028138914 and parameters: {'n_estimators': 257, 'max_depth': 13, 'min_samples_split': 2, 'max_features': 0.5018410795657005, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:16,975] Trial 21 finished with value: -25.049472839051905 and parameters: {'n_estimators': 266, 'max_depth': 13, 'min_samples_split': 2, 'max_features': 0.5035995088931404, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:19,796] Trial 22 finished with value: -25.40618806714185 and parameters: {'n_estimators': 259, 'max_depth': 12, 'min_samples_split': 2, 'max_features': 0.598323239156157, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:21,974] Trial 23 finished with value: -25.58027667375453 and parameters: {'n_estimators': 267, 'max_depth': 13, 'min_samples_split': 2, 'max_features': 0.4924898502150521, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:23,439] Trial 24 finished with value: -51.364012284973725 and parameters: {'n_estimators': 248, 'max_depth': 6, 'min_samples_split': 3, 'max_features': 0.3376633298161329, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:29,229] Trial 25 finished with value: -25.01715490350073 and parameters: {'n_estimators': 281, 'max_depth': 13, 'min_samples_split': 2, 'max_features': 0.526563882233623, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:35,586] Trial 26 finished with value: -26.120478699976605 and parameters: {'n_estimators': 283, 'max_depth': 17, 'min_samples_split': 3, 'max_features': 0.7750617233199657, 'bootstrap': True}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:40,689] Trial 27 finished with value: -25.241170415701852 and parameters: {'n_estimators': 248, 'max_depth': 18, 'min_samples_split': 2, 'max_features': 0.6007600528113008, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:46,351] Trial 28 finished with value: -25.10829391897402 and parameters: {'n_estimators': 283, 'max_depth': 14, 'min_samples_split': 3, 'max_features': 0.5326171103505323, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:49,946] Trial 29 finished with value: -31.290759901327323 and parameters: {'n_estimators': 239, 'max_depth': 11, 'min_samples_split': 10, 'max_features': 0.6304901625301235, 'bootstrap': True}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:54,842] Trial 30 finished with value: -29.96036760703767 and parameters: {'n_estimators': 282, 'max_depth': 8, 'min_samples_split': 4, 'max_features': 0.6845549023232097, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:26:59,715] Trial 31 finished with value: -25.54159905762501 and parameters: {'n_estimators': 276, 'max_depth': 13, 'min_samples_split': 2, 'max_features': 0.4646225445694197, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:02,619] Trial 32 finished with value: -29.47895509043541 and parameters: {'n_estimators': 239, 'max_depth': 11, 'min_samples_split': 2, 'max_features': 0.3337174572722634, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:07,713] Trial 33 finished with value: -25.10296566463161 and parameters: {'n_estimators': 264, 'max_depth': 14, 'min_samples_split': 3, 'max_features': 0.5511559243043505, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:10,108] Trial 34 finished with value: -63.68816909646141 and parameters: {'n_estimators': 287, 'max_depth': 5, 'min_samples_split': 2, 'max_features': 0.3700616731089992, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:13,313] Trial 35 finished with value: -26.214066315695117 and parameters: {'n_estimators': 254, 'max_depth': 10, 'min_samples_split': 3, 'max_features': 0.5143047458829418, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:16,490] Trial 36 finished with value: -25.804446247555756 and parameters: {'n_estimators': 273, 'max_depth': 18, 'min_samples_split': 2, 'max_features': 0.628542476293521, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:18,412] Trial 37 finished with value: -30.74941447019389 and parameters: {'n_estimators': 293, 'max_depth': 12, 'min_samples_split': 6, 'max_features': 0.439358983807434, 'bootstrap': True}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:20,375] Trial 38 finished with value: -27.18941345765511 and parameters: {'n_estimators': 235, 'max_depth': 16, 'min_samples_split': 8, 'max_features': 0.7247673669872063, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:22,187] Trial 39 finished with value: -26.210379372917743 and parameters: {'n_estimators': 228, 'max_depth': 10, 'min_samples_split': 3, 'max_features': 0.5489833527675468, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:23,500] Trial 40 finished with value: -32.00209163883295 and parameters: {'n_estimators': 206, 'max_depth': 30, 'min_samples_split': 3, 'max_features': 0.26433448257576414, 'bootstrap': True}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:25,553] Trial 41 finished with value: -25.12117215528183 and parameters: {'n_estimators': 273, 'max_depth': 16, 'min_samples_split': 4, 'max_features': 0.470156746774311, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:28,158] Trial 42 finished with value: -25.532591856630795 and parameters: {'n_estimators': 292, 'max_depth': 13, 'min_samples_split': 2, 'max_features': 0.48494384691205156, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:30,580] Trial 43 finished with value: -25.018360803529244 and parameters: {'n_estimators': 294, 'max_depth': 14, 'min_samples_split': 4, 'max_features': 0.5879247244115722, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:33,218] Trial 44 finished with value: -25.32099810655179 and parameters: {'n_estimators': 275, 'max_depth': 14, 'min_samples_split': 2, 'max_features': 0.5863708397603562, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:34,633] Trial 45 finished with value: -29.938008991944514 and parameters: {'n_estimators': 185, 'max_depth': 8, 'min_samples_split': 4, 'max_features': 0.524360504292875, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:36,844] Trial 46 finished with value: -25.282746937241093 and parameters: {'n_estimators': 257, 'max_depth': 11, 'min_samples_split': 3, 'max_features': 0.6247620306923501, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:40,247] Trial 47 finished with value: -25.834004640558202 and parameters: {'n_estimators': 289, 'max_depth': 19, 'min_samples_split': 2, 'max_features': 0.6590203027191089, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:43,404] Trial 48 finished with value: -26.500516151967986 and parameters: {'n_estimators': 266, 'max_depth': 15, 'min_samples_split': 7, 'max_features': 0.7117179179504369, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n",
+      "[I 2025-04-01 00:27:47,630] Trial 49 finished with value: -28.63919368614392 and parameters: {'n_estimators': 216, 'max_depth': 17, 'min_samples_split': 5, 'max_features': 0.7605968616946254, 'bootstrap': False}. Best is trial 17 with value: -24.87185738752868.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Final Results:\n",
+      "| Model             |    R² |   RMSE |\n",
+      "|:------------------|------:|-------:|\n",
+      "| Gradient Boosting | 0.921 |   4.52 |\n",
+      "| Random Forest     | 0.887 |   5.4  |\n",
+      "| AdaBoost          | 0.834 |   6.54 |\n"
      ]
     }
    ],
